height of screen

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <button>Genera</button>
 
             </div>
-            <div class="loading-screeen">
+            <div class="loading-screen">
                 <img src="asset/loader.gif" alt="loader">
                 <p>Attendi, prego</p>
             </div>
