--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div id="app">
-        <header>
+        <header class="header">
             <img src="asset/icon.png" alt="icon">
             <h1>Emojii Stories</h1>
         </header>
